# RustShell

./: .gitignore  Cargo.toml  README.md  build.rs  enc.txt
direnc/test1/: hello.txt
direnc/test2/: hi.txt
src/: antivm.rs  encrypt.rs  functions.rs  hide_window.rs  main.rs
