[package]
name = "nothing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
winapi = { version = "0.3.9", features = ["winuser","wincontypes","wincon"] }
rusty_password = "0.1.2"
colored = "2.0.0"
base64 = "0.20.0"
ansi_term = "^0.12.1"
rustyline = "*"